--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -14,7 +14,15 @@
     font-size: x-large;
     font-style: bold;
     text-align: center;
+    font-family: 'Courier New', monospace;
+}
 
+p {
+    font-family: 'Courier New', monospace;
+}
+
+ul {
+    font-family: 'Courier New', monospace;
 }
 
 .corner_image {
@@ -39,22 +47,47 @@
 }
 
 .space2 {
-    min-width: 5vw;
+    min-width: 1vw;
 }
 
 .header {
     display: inline-block;
-
     max-height: 20vh;
     text-decoration-line: underline;
+    font-family: 'Courier New', monospace;
 }
 
 .aboutmetext {
     display: inline-block;
-    align-self: center;
-
+    padding-left: 10px;
 }
 
-.aboutmeimage {
-    min-width: 40vh;
+#aboutmeimg {
+    height: 1000px;
+    width: 800px;
+    padding-left: 2vw;
+}
+
+.experiencetext {
+    padding-right: 15px;
+}
+
+#experienceimage {
+    height: 100vh;
+    width: 55vw;
+}
+
+.sidenote {
+    font-family: 'Courier New', monospace;
+}
+.contactmain{
+    display:grid;
+    grid-template-columns: 8% 92%;
+    grid-template-rows: 100%;
+}
+.contactnav{
+    grid-column: 1/2;
+}
+.col2{
+    grid-column: 2/3;
 }
