--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -80,14 +80,56 @@ ul {
 .sidenote {
     font-family: 'Courier New', monospace;
 }
-.contactmain{
-    display:grid;
-    grid-template-columns: 8% 92%;
+
+.contactmain {
+    display: grid;
+    grid-template-columns: 7% 93%;
     grid-template-rows: 100%;
 }
-.contactnav{
+
+.contactnav {
     grid-column: 1/2;
 }
-.col2{
+
+.col2 {
     grid-column: 2/3;
+}
+
+.contactheader {
+    padding-left: 2vw;
+    grid-row: 1/2;
+}
+
+.contacttext {
+    padding-left: 4vw;
+
+    grid-column: 1/2;
+}
+
+.contactbody {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: 40% 60%;
+}
+
+#ig {
+    width: 20px;
+    height: 20px;
+}
+
+#email {
+    padding-bottom: 15vh;
+}
+
+#frame {
+    grid-column: 2/3;
+    grid-row:1/2;
+    width:55vw;
+    height:100vh;
+    border: 5px solid black;
+    background-color: white;
+    position:absolute;
+    right:2px;
+    bottom:10px;
+    top:10px;
 }
